fix: color and text align

--- a/style/style.css
+++ b/style/style.css
@@ -31,6 +31,18 @@ body {
     text-align: justify;
 }
 
+.mySocial{
+    display: flex;
+    justify-content: center;
+    margin-inline: auto;
+    margin-block-start: 15px;
+    margin-block-end: 5px;
+    font-family: monospace;
+    font-size: 18px;
+    color: #BDCDD6;
+    font-weight: 800;
+}
+
 .socialNetwork {
     display: flex;
     justify-content: space-between;
@@ -60,7 +72,7 @@ body {
 }
 
 .techs span {
-    border: #BDCDD6 solid 5px;
+    border: #93BFCF solid 5px;
     display: flex;
     justify-content: center;
     width: 600px;
@@ -68,7 +80,7 @@ body {
     margin-block-start: 25px;
     margin-block-end: 25px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #EEE9DA;
+    color: #BDCDD6;
     font-size: 20px;
     text-align: justify;
 }
@@ -93,6 +105,7 @@ body {
 
 .imgText div {
     position: absolute;
+    text-align: right;
     bottom: 0;
     right: 0;
     background: black;
